new file:   prisma/migrations/20260119025259_add_admin_models/migration.sql 	modified:   prisma/schema.prisma 	modified:   prisma/seed.ts 	modified:   src/app.ts 	modified:   src/middleware/auth.middleware.ts 	new file:   src/modules/approval-user/ApprovalUser.controller.ts 	new file:   src/modules/approval-user/ApprovalUser.model.ts 	new file:   src/modules/approval-user/ApprovalUser.repository.ts 	new file:   src/modules/approval-user/ApprovalUser.route.ts 	new file:   src/modules/approval-user/ApprovalUser.service.ts 	new file:   src/modules/designation/Designation.controller.ts 	new file:   src/modules/designation/Designation.model.ts 	new file:   src/modules/designation/Designation.repository.ts 	new file:   src/modules/designation/Designation.route.ts 	new file:   src/modules/designation/Designation.service.ts 	new file:   src/modules/request-training/RequestTraining.controller.ts 	new file:   src/modules/request-training/RequestTraining.model.ts 	new file:   src/modules/request-training/RequestTraining.repository.ts 	new file:   src/modules/request-training/RequestTraining.route.ts 	new file:   src/modules/request-training/RequestTraining.service.ts 	new file:   src/modules/training-category/TrainingCategory.controller.ts 	new file:   src/modules/training-category/TrainingCategory.model.ts 	new file:   src/modules/training-category/TrainingCategory.repository.ts 	new file:   src/modules/training-category/TrainingCategory.route.ts 	new file:   src/modules/training-category/TrainingCategory.service.ts 	new file:   src/modules/user-attendance/UserAttendance.controller.ts 	new file:   src/modules/user-attendance/UserAttendance.model.ts 	new file:   src/modules/user-attendance/UserAttendance.repository.ts 	new file:   src/modules/user-attendance/UserAttendance.route.ts 	new file:   src/modules/user-attendance/UserAttendance.service.ts 	modified:   src/modules/user/User.repository.ts 	modified:   swagger-output.json
